--- a/03_Typescript_Fundamentals/package.json
+++ b/03_Typescript_Fundamentals/package.json
@@ -11,5 +11,10 @@
   "devDependencies": {
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "axios": "^1.6.8",
+    "valibot": "^0.30.0",
+    "zod": "^3.22.4"
   }
 }
