05: Comfy Sloth Store App: put folder in OLD, and  restart again

--- a/05_Comfy_Sloth_Store_App_OLD/tsconfig.json
+++ b/05_Comfy_Sloth_Store_App_OLD/tsconfig.json
@@ -19,6 +19,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+
+    /* shadcn/ui setup */
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
