05: Comfy Sloth Store App: useSlice setup

--- a/05_Comfy_Sloth_Store_App/tsconfig.app.json
+++ b/05_Comfy_Sloth_Store_App/tsconfig.app.json
@@ -29,5 +29,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "@types/types.single-product.ts", "@types/types.d.ts"]
 }
